syntax = "proto3";

package api.chat_v1;

import 'google/protobuf/empty.proto';
import 'google/protobuf/timestamp.proto';

option go_package = "github.com/en7ka/chat-server/pkg/chat_v1;chatv1";

service ChatAPI {
  rpc CreateChat(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {};
  rpc GetChat(GetChatRequest) returns (GetChatResponse);
  rpc AddMemberToChat(AddMemberToChatRequest) returns (AddMemberToChatResponse);
}

message CreateRequest {
  repeated string usernames = 1;
}

message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message SendMessageRequest {
  int64 chat_id = 1;
  int64 from_user_id = 2;
  string text = 3;
}

message SendMessageResponse {
  Message message = 1;
}

message Chat {
  int64 id = 1;
  string name = 2;
  google.protobuf.Timestamp created_at = 3;
}

message GetChatRequest {
  int64 id = 1;
}

message GetChatResponse {
  Chat chat = 1;
}

message Message {
  int64 id = 1;
  int64 from_user_id = 2;
  string text = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message GetMessagesRequest {
  int64 chat_id = 1;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message AddMemberToChatRequest {
  int64 chat_id = 1;
  int64 user_id = 2;
}

message AddMemberToChatResponse {
  int64 member_id = 1;
}